# lmklib

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Dockerfile  IDEAS.md  README.md  build-cross-img.sh  create-cross-volumes.sh  cross.dockerfile  cross.sh  key-data.txt  rustup-init.sh
.github/workflows/: docs.yml
k-server/: Cargo.toml
lib/fschema/: Cargo.toml
lib/fschema/src/: lib.rs  parse.rs
lib/key-module/: Cargo.toml  README.md
lib/key-module/example/driver/: Cargo.toml
lib/key-module/example/driver/src/: lib.rs
lib/key-module/example/func/: Cargo.toml
lib/key-module/example/func/src/: lib.rs
lib/key-module/example/pydriver/: meta.json  module.py
lib/key-module/example/pyfunc/: meta.json  module.py
lib/key-module/python/: driver._template.py  func._template.py
lib/key-module/src/: driver.rs  function.rs  hid.rs  lib.rs
lib/key-rpc/: Cargo.toml  README.md
lib/key-rpc/src/: lib.rs
lib/mcp23017-driver/: Cargo.toml  README.md
lib/mcp23017-driver/src/: lib.rs
lib/mcp3008-driver/: Cargo.toml  README.md  doc.rs  mcp3008-driver.py
lib/virt-hid/: Cargo.toml
lib/virt-hid/src/: hid.rs  key.rs  mouse.rs  translate.rs
lib/ws-1in5-driver/: Cargo.toml  README.md
lib/ws-1in5-driver/src/: lib.rs
lib/ws-1in5-i2c/: README.md
lib/ws-1in5-i2c/src/: lib.rs
lmk-bork/: Cargo.toml  README.md
lmk-bork/src/: interpreter.rs  main.rs  parser.rs
lmk-hid/: Cargo.toml  README.md
lmk-hid/src/: hid.rs  key.rs  lib.rs  mouse.rs  translate.rs
lmk-k-server/: Cargo.toml
lmk-kout/: Cargo.toml  README.md
lmk-kout/src/: main.rs
lmk-kserver/: Cargo.toml
lmk-kservice/: README.md  install.sh  setup-hid.sh
lmk-quack/: Cargo.toml  README.md
lmk-quack/src/: interpreter.rs  main.rs  parser.rs
lmk-service/: README.md  build-reports.sh  hid.service  keyboard.desc  keyboard.xml  setup-hid.sh
