[workspace]
members = [
    "lib/virt-hid",
    "bin/kserver",
    "bin/gadget-service",
    "bin/kout",
    "bin/quack",
    "bin/bork",
    "external/keyboard-layouts",
    "external/fschema/fschema",
    "external/configfs",
    "external/mcp23017-rpi-libg"
]

[workspace.dependencies]
virt-hid = { path = "lib/virt-hid" }
fschema-lib = { path = "external/fschema/fschema-lib" }
keyboard-layouts = { path= "external/keyboard-layouts" }
gen_layouts_sys = { path= "external/keyboard-layouts/gen_layouts_sys" }
configfs = { path = "external/configfs" }
mcp23017-rpi-lib = { path = "external/mcp23017-rpi-libg" }