[workspace]
members = [
    "lib/key-rpc",
    "lib/virt-hid",
    "lib/key-module",
    "lib/key-module/example/driver",
    "lib/key-module/example/func",
    "lib/mcp23017-driver",
    "lib/ws-1in5-i2c",
    "lib/ws-1in5-driver",
    "bin/key-server",
    "bin/key-server-cli",
    "bin/gadget-service",
    "bin/kout",
    "bin/quack",
    "bin/bork",
    "bin/hid-interface",
    "external/keyboard-layouts",
    "external/fschema/fschema",
    "external/configfs",
    "external/mcp23017-rpi-libg"
]

[workspace.dependencies]
virt-hid = { path = "lib/virt-hid" }
key-module = { path = "lib/key-module" }
key-rpc = { path = "lib/key-rpc" }
fschema-lib = { path = "external/fschema/fschema-lib" }
keyboard-layouts = { path= "external/keyboard-layouts" }
gen_layouts_sys = { path= "external/keyboard-layouts/gen_layouts_sys" }
configfs = { path = "external/configfs" }
mcp23017-rpi-lib = { path = "external/mcp23017-rpi-libg" }
ws-1in5-i2c = { path = "lib/ws-1in5-i2c" }