[workspace]
members = [
    "lib/key-rpc",
    "lib/key-module",
    "lib/key-module/example/driver",
    "lib/key-module/example/func",
    "lib/mcp3008-driver",
    "lib/mcp23017-driver",
    "lib/ws-1in5-driver",
    "bin/key-server",
    "bin/key-server-cli",
    "bin/gadget-service",
    "bin/kout",
    "bin/hid-interface",
    "external/virt-hid",
    "external/fschema/fschema",
    "external/configfs",
    "external/mcp23017-rpi-libg",
    "external/ws-1in5-i2c",
]

default-members = [
    "lib/key-rpc",
    "lib/key-module",
    "lib/mcp3008-driver",
    "lib/mcp23017-driver",
    "lib/ws-1in5-driver",
    "bin/key-server",
    "bin/key-server-cli",
    "bin/gadget-service",
    "bin/kout",
    "bin/hid-interface",
]

[workspace.dependencies]
virt-hid = { path = "external/virt-hid" }
key-module = { path = "lib/key-module" }
key-rpc = { path = "lib/key-rpc" }
fschema-lib = { path = "external/fschema/fschema-lib" }
configfs = { path = "external/configfs" }
mcp23017-rpi-lib = { path = "external/mcp23017-rpi-libg" }
ws-1in5-i2c = { path = "external/ws-1in5-i2c" }

