[package]
name = "lmk-hid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["tempfile"]

[dependencies]
nix = { version = "0.25.0", features = ["poll"] }
tempfile = { version = "3", optional = true }
gen_layouts_sys = { path= "../keyboard-layouts/gen_layouts_sys" }
keyboard-layouts = { path= "../keyboard-layouts" }
