[package]
name = "mcp23017-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
key-module = { workspace = true }
mcp23017-rpi-lib = { workspace = true }
abi_stable = "0.11.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
