[package]
name = "ws-1in5-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
virt-hid = { workspace = true }
key-rpc = { workspace = true }
key-module = { workspace = true }
ws-1in5-i2c = { workspace = true }
abi_stable = "0.11.1"
tokio = { version = "1", features = ["full"] }
imageproc = "0.23.0"
image = "0.24.5"
rusttype = "0.9.3"
nanomsg = {version = "0.7.2"}
chrono = "0.4.23"
itertools = "0.10.5"
serde_json = "1.0"