[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
abi_stable = "0.11.1"
key-module = { workspace = true }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
slab = "0.4.7"
